# python-with-postgresql

./: README.md  pyproject.toml  requirements.txt
base/: main.py  utils.py
