[tool.poetry]
name = "python-postgresql"
version = "0.1.0"
description = ""
authors = ["davilos <daviloscostagg@hotmail.com>"]
readme = "README.md"
packages = [{include = "python_postgresql"}]

[tool.poetry.dependencies]
python = "^3.11"
psycopg2-binary = "^2.9.5"
rich = "^13.3.2"
mypy = "^1.1.1"
isort = "^5.12.0"
blue = "^0.9.1"
types-psycopg2 = "^2.9.21.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
